# gitlab-sync

./: .gitignore  Pipfile  README.md  pyproject.toml  setup.py
gitlab_sync/: gitlab_sync.py
src/: gitlab-sync.py
